--- a/src/sample/LookUpQuote.fxml
+++ b/src/sample/LookUpQuote.fxml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
-<?import java.net.*?>
-
-<GridPane hgap="50" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sample.StockInfoController">
+<?import java.net.URL?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" hgap="50" vgap="10" xmlns="http://javafx.com/javafx/8"
+          fx:controller="sample.StockInfoController">
     <padding>
         <Insets bottom="25" left="25" right="25" top="25" />
     </padding>
    <children>
-   
-       <Label fx:id="mainmessage" text="Please enter the stock quote you wish to lookup" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0" />
-       <TextField fx:id="stockname" GridPane.columnIndex="1" GridPane.columnSpan="1" GridPane.rowIndex="1" />
-       <Button fx:id="submit" onAction="#handleButtonAction" text="Submit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+
+       <Label fx:id="mainmessage" text="Please enter the stock quote you wish to lookup" wrapText="true"
+              GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0"/>
+       <TextField fx:id="stockname" GridPane.columnIndex="2" GridPane.columnSpan="1" GridPane.rowIndex="1"/>
+       <Button fx:id="submit" onAction="#handleButtonAction" text="Submit" GridPane.columnIndex="2"
+               GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
    </children>
 
 
