--- a/src/stockinvestor/fxml/MainMenu.fxml
+++ b/src/stockinvestor/fxml/MainMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.*?>
 
-<GridPane prefHeight="190.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane prefHeight="190.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stockinvestor.controller.MainMenuController">
 
     <padding>
         <Insets top="25" right="25" bottom="25" left="25"/>
@@ -23,7 +23,7 @@
    </children>
 
     <stylesheets>
-        <URL value="@sample.css" />
+        <URL value="@../css/MainMenu.css" />
     </stylesheets>
    <columnConstraints>
       <ColumnConstraints />
