--- a/src/stockinvestor/fxml/mainscreen.fxml
+++ b/src/stockinvestor/fxml/mainscreen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="511.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="sample.mainscreenController">
+            fx:controller="stockinvestor.controller.mainscreenController">
     <top>
         <StackPane fx:id="topbox" prefHeight="88.0" prefWidth="697.0">
             <padding><Insets bottom="15" left="12" right="12" top="15" /></padding>
@@ -56,7 +56,7 @@
             <children>
                 <ImageView fx:id="imageView" fitHeight="71.0" fitWidth="80.0" layoutX="61.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@images/bloomberg.png" />
+                        <Image url="@../images/bloomberg.png" />
                     </image>
                 </ImageView>
                 <Label fx:id="news" text="NEWS" textAlignment="CENTER" />
@@ -64,6 +64,6 @@
         </HBox>
     </bottom>
     <stylesheets>
-        <URL value="@mainscreen.css" />
+        <URL value="@../css/mainscreen.css" />
     </stylesheets>
 </BorderPane>
