--- a/src/stockinvestor/fxml/MainMenu.fxml
+++ b/src/stockinvestor/fxml/MainMenu.fxml
@@ -16,8 +16,8 @@
        <Label fx:id="mainmessage" prefHeight="153.0" prefWidth="318.0" text="Welcome to my Stock Investor, please click the buttons below to start a new game or load a new game" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="0" />
        <StackPane alignment="TOP_RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="1">
           <children>
-          <Button fx:id="btn1" onAction="#handleButtonAction" text="New Game" StackPane.alignment="CENTER_LEFT" />
-          <Button text="Load Game" StackPane.alignment="CENTER_RIGHT" />
+          <Button fx:id="newGame" onAction="#handleNewGameButtonAction" text="New Game" StackPane.alignment="CENTER_LEFT" />
+          <Button fx:id="loadGame" onAction="#handleLoadGameButtonAction" text="Load Game" StackPane.alignment="CENTER_RIGHT" />
           </children>
        </StackPane>
    </children>
