--- a/src/stockinvestor/fxml/QuoteInfo.fxml
+++ b/src/stockinvestor/fxml/QuoteInfo.fxml
@@ -3,43 +3,22 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-<?import java.net.URL?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="244" prefWidth="358" xmlns="http://javafx.com/javafx/8"
-            fx:controller="stockinvestor.controller.quoteInfoController">
-    <top>
-        <StackPane fx:id="topbox" prefHeight="88.0" prefWidth="358">
-            <padding>
-                <Insets bottom="15" left="12" right="12" top="15"/>
-            </padding>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox prefHeight="244" prefWidth="235" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stockinvestor.controller.quoteInfoController">
             <children>
-                <Label fx:id="name" text="QUOTE NAME" StackPane.alignment="CENTER"/>
-                <Label fx:id="quoteticker" text="QUOTE TICKER" StackPane.alignment="BOTTOM_CENTER"/>
-
-            </children>
-        </StackPane>
-    </top>
-    <left>
-
-
-    </left>
-    <center>
-        <Text fx:id="stocksheld" text="Stocks held" textAlignment="CENTER" BorderPane.alignment="TOP_CENTER"/>
-    </center>
-    <right>
-        <VBox fx:id="rightPane" maxHeight="244.0" maxWidth="235.0" minHeight="244.0" minWidth="235.0">
-            <children>
-                <Button fx:id="buyStock">Buy Stock</Button>
+                <ImageView fx:id="stockImage" fitHeight="150.0" fitWidth="150.0">
+                    <Image url="@../images/test.jpg" />
+         <VBox.margin>
+            <Insets left="40.0" />
+         </VBox.margin>
+                </ImageView>
+                <Label fx:id="stockName" text="StockName" />
+                <Label fx:id="stockPrice" text="StockPrice" />
+                <Button fx:id="buyStock" onAction="#handleButtonAction">Buy Stock</Button>
                 <Button fx:id="sellStock">Sell Stock</Button>
 
             </children>
         </VBox>
-
-    </right>
-    <bottom>
-    </bottom>
-    <stylesheets>
-        <URL value="@../css/mainscreen.css"/>
-    </stylesheets>
-</BorderPane>
