--- a/src/stockinvestor/fxml/mainscreen.fxml
+++ b/src/stockinvestor/fxml/mainscreen.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<FlowPane prefHeight="511.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stockinvestor.controller.MainScreenController">
+<FlowPane prefHeight="511.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stockinvestor.controller.mainscreenController">
    <children>
    
    <BorderPane fx:id="mainScreen">
